@@ -491,6 +491,7 @@ terminator_error (cb_tree stmt, const unsigned int termid, const char *name)
 static void
 terminator_clear (cb_tree stmt, const unsigned int termid)
 {
+	struct cb_perform	*p;
 	check_unreached = 0;
 	if (term_array[termid]) {
 		term_array[termid]--;
@@ -501,6 +502,13 @@ terminator_clear (cb_tree stmt, const unsigned int termid)
 		COBC_ABORT ();
 	}
 	/* LCOV_EXCL_END */
+	if (termid == TERM_PERFORM
+	 && perform_stack) {
+		p = CB_PERFORM (CB_VALUE (perform_stack));
+		if (p->perform_type == CB_PERFORM_UNTIL) {
+			cb_terminate_cond ();
+		}
+	}
 	/* Free tree associated with terminator */
 	if (stmt) {
 		cobc_parse_free (stmt);
@@ -7024,11 +7032,13 @@ procedure:
 		next_label_id++;
 	}
 	/* check_unreached = 0; */
+	cb_end_statement();
   }
 | invalid_statement %prec SHIFT_PREFER
 | TOK_DOT
   {
 	/* check_unreached = 0; */
+	cb_end_statement();
   }
 ;
 
@@ -9166,6 +9176,10 @@ evaluate_object:
 
 	/* Build expr now */
 	e1 = cb_build_expr (parm1);
+	cb_terminate_cond ();
+	cb_end_cond (e1);
+	cb_save_cond ();
+	cb_true_side ();
 
 	eval_inc2++;
 	$$ = CB_BUILD_PAIR (not0, CB_BUILD_PAIR (e1, e2));
@@ -9438,7 +9452,7 @@ if_statement:
   {
 	begin_statement ("IF", TERM_IF);
   }
-  condition _then if_else_statements
+  condition if_then if_else_statements
   end_if
 ;
 
@@ -9457,15 +9471,25 @@ if_else_statements:
   }
 ;
 
+if_then:
+  {
+	cb_save_cond ();
+  }
+| THEN
+  {
+	cb_save_cond ();
+  }
+;
+
 if_true:
   {
-	  cb_if_true();
+	  cb_true_side ();
   }
 ;
 
 if_false:
   {
-	  cb_if_false();
+	  cb_false_side ();
   }
 ;
 
@@ -9473,12 +9497,12 @@ end_if:
   /* empty */	%prec SHIFT_PREFER
   {
 	TERMINATOR_WARNING ($-4, IF);
-	cb_if_end();
+	cb_terminate_cond ();
   }
 | END_IF
   {
 	TERMINATOR_CLEAR ($-4, IF);
-	cb_if_end();
+	cb_terminate_cond ();
   }
 ;
 
