@@ -3932,7 +3932,7 @@ AT_CLEANUP
 
 
 AT_SETUP([Constant Expressions (1)])
-AT_KEYWORDS([conditions refmod])
+AT_KEYWORDS([conditions refmod IF EVALUATE])
 
 AT_DATA([prog.cob], [
        IDENTIFICATION DIVISION.
@@ -3940,7 +3940,7 @@ AT_DATA([prog.cob], [
        DATA  DIVISION.
        WORKING-STORAGE SECTION.
        01  var       PIC X(200).
-       01  OTHERvar  PIC X(115).
+       01  othervar  PIC X(115).
        01  A         PIC 9 VALUE 1.
        01  B         PIC 9 VALUE 2.
        01  C         PIC 9 VALUE 3.
@@ -3968,6 +3968,10 @@ AT_DATA([prog.cob], [
                  END-IF
               END-IF
               move A to B
+              IF 1 = 1
+                IF 2 = 1
+                 move othervar (1:var-len - 8)
+                   to var (17 - var-len:var-len - 8)
            .
 
            PERFORM WITH TEST BEFORE UNTIL 1 = 3
@@ -3975,7 +3979,8 @@ AT_DATA([prog.cob], [
            END-PERFORM
 
            PERFORM WITH TEST BEFORE UNTIL 1 = 1
-               move othervar to var
+               move othervar (1:var-len - 8)
+                 to var (17 - var-len:var-len - 8)
            END-PERFORM
 
            PERFORM WITH TEST AFTER UNTIL 1 = 3
@@ -3987,9 +3992,10 @@ AT_DATA([prog.cob], [
            END-PERFORM
 
            EVALUATE TRUE
-           WHEN var-len < 16
-               move othervar to var
-           WHEN var-len > 16
+           WHEN  var-len < 16
+               move othervar (1:var-len - 8)
+                 to var (17 - var-len:var-len - 8)
+           WHEN  var-len > 16
                move othervar to var
            WHEN OTHER
                move othervar to var
@@ -4009,6 +4015,7 @@ AT_DATA([prog.cob], [
            IF 15 = var-len
            OR var-len = 15
                move othervar to var.
+
            STOP RUN.
 ])
 
@@ -4019,31 +4026,40 @@ prog.cob: 22: warning: expression '2' EQUALS '3' is always FALSE
 prog.cob: 25: warning: expression '1' EQUALS '1' is always TRUE
 prog.cob: 29: error (ignored): offset of 'var' out of bounds: -98
 prog.cob: 30: warning: expression '1' EQUALS '1' is always TRUE
-prog.cob: 37: warning: expression '1' EQUALS '3' is always FALSE
-prog.cob: 37: warning: PERFORM FOREVER since UNTIL is always FALSE
-prog.cob: 41: warning: expression '1' EQUALS '1' is always TRUE
-prog.cob: 41: warning: PERFORM NEVER since UNTIL is always TRUE
-prog.cob: 45: warning: expression '1' EQUALS '3' is always FALSE
-prog.cob: 45: warning: PERFORM FOREVER since UNTIL is always FALSE
-prog.cob: 49: warning: expression '1' EQUALS '1' is always TRUE
-prog.cob: 49: warning: PERFORM ONCE since UNTIL is always TRUE
-prog.cob: 54: warning: expression '115' LESS THAN '16' is always FALSE
-prog.cob: 56: warning: expression '115' GREATER THAN '16' is always TRUE
-prog.cob: 67: warning: expression '115' GREATER THAN '16' is always TRUE
-prog.cob: 63: warning: expression '115' EQUALS '15' is always FALSE
-prog.cob: 64: warning: expression '115' EQUALS '115' is always TRUE
-prog.cob: 73: warning: expression '15' EQUALS '115' is always FALSE
-prog.cob: 74: warning: expression '115' EQUALS '15' is always FALSE
+prog.cob: 35: warning: expression '1' EQUALS '1' is always TRUE
+prog.cob: 36: warning: expression '2' EQUALS '1' is always FALSE
+prog.cob: 38: error (ignored): offset of 'var' out of bounds: -98
+prog.cob: 41: warning: expression '1' EQUALS '3' is always FALSE
+prog.cob: 41: warning: PERFORM FOREVER since UNTIL is always FALSE
+prog.cob: 45: warning: expression '1' EQUALS '1' is always TRUE
+prog.cob: 45: warning: PERFORM NEVER since UNTIL is always TRUE
+prog.cob: 47: error (ignored): offset of 'var' out of bounds: -98
+prog.cob: 50: warning: expression '1' EQUALS '3' is always FALSE
+prog.cob: 50: warning: PERFORM FOREVER since UNTIL is always FALSE
+prog.cob: 54: warning: expression '1' EQUALS '1' is always TRUE
+prog.cob: 54: warning: PERFORM ONCE since UNTIL is always TRUE
+prog.cob: 59: warning: expression '115' LESS THAN '16' is always FALSE
+prog.cob: 61: error (ignored): offset of 'var' out of bounds: -98
+prog.cob: 62: warning: expression '115' GREATER THAN '16' is always TRUE
+prog.cob: 73: warning: expression '115' GREATER THAN '16' is always TRUE
+prog.cob: 69: warning: expression '115' EQUALS '15' is always FALSE
+prog.cob: 70: warning: expression '115' EQUALS '115' is always TRUE
+prog.cob: 79: warning: expression '15' EQUALS '115' is always FALSE
+prog.cob: 80: warning: expression '115' EQUALS '15' is always FALSE
 ])
 
 AT_CLEANUP
 
 
 AT_SETUP([Constant Expressions (2)])
-AT_KEYWORDS([conditions])
+AT_KEYWORDS([conditions refmod IF EVALUATE])
 
 # we currently don't have a way to show the correct line numbers
 # when we compare two constants
+
+# we currently do the comparision checks for EVALUATE from last WHEN to first one
+# to get the line numbers in order we'd need to have to postpone the check
+# until the list of WHENs is reversed
 AT_XFAIL_IF(true)
 
 AT_DATA([prog.cob], [
@@ -4052,7 +4068,9 @@ AT_DATA([prog.cob], [
        DATA  DIVISION.
        WORKING-STORAGE SECTION.
        78  const1    value 115.
-       78  const2    value 112.
+       78  const2    value 200.
+       77  othervar  PIC X(const1).
+       01  var       PIC X(const2).
 
        PROCEDURE DIVISION.
 
@@ -4060,13 +4078,33 @@ AT_DATA([prog.cob], [
            OR const2 = const1
               DISPLAY 'no way' END-DISPLAY
            END-IF
+
+           EVALUATE const1
+           WHEN  15
+           WHEN 115
+               display '1'
+           WHEN  < 16
+               move othervar (1:const1 - 8)
+                 to var (17 - const1:const1 - 8)
+           WHEN  > 16
+               display othervar
+           *> actually WHEN OTHER is also FALSE in this case (115 = 16),
+           *> but this is too complex to check
+           WHEN OTHER
+               display othervar
+           END-EVALUATE
            STOP RUN.
 ])
 
 AT_CHECK([$COMPILE_ONLY prog.cob], [0], [],
-[prog.cob: 11: warning: expression '112' EQUALS '115' is always FALSE
-prog.cob: 12: warning: expression '115' EQUALS '112' is always FALSE
-prog.cob: 11: warning: expression is always FALSE
+[prog.cob: 13: warning: expression '115' EQUALS '200' is always FALSE
+prog.cob: 14: warning: expression '200' EQUALS '115' is always FALSE
+prog.cob: 13: warning: expression is always FALSE
+prog.cob: 19: warning: expression '115' EQUALS '15' is always FALSE
+prog.cob: 20: warning: expression '115' EQUALS '115' is always TRUE
+prog.cob: 22: warning: expression '115' LESS THAN '16' is always FALSE
+prog.cob: 24: error (ignored): offset of 'var' out of bounds: -98
+prog.cob: 25: warning: expression '115' GREATER THAN '16' is always TRUE
 ])
 
 AT_CLEANUP
